[package]
name = "query_test"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
query_test_attr = { path = "../query_test_attr" }
rand = "0.7.3"
yansi = "0.5.0"
apply = "0.3.0"

[[example]]
name = "helper"
path = "../examples/helper.rs"
crate-type = [ "staticlib" ]
