[package]
name = "query_test_attr"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
syn = { version = "1.0.42", features = ["full"] }
quote = "1.0.7"
